# materialdecoration

./: .travis.yml  AUTHORS.md  CMakeLists.txt  README.md  materialdecoration.qbs
.travis/: build.sh
src/plugins/decorations/material/: CMakeLists.txt  material.qbs  materialdecoration.cpp  materialdecoration.h
